mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    name: mongo-deploy
  namespace: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        # envFrom:
        #   - secretRef:
        #       name: mongo-secret
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        readinessProbe:
          tcpSocket:
            port: 20717
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: mongo-objects
      tolerations:
        - key: "key"
          operator: "Equal"
          value: "mongo"
          effect: PreferNoSchedule
      volumes:
        - name: mongo-objects
          persistentVolumeClaim:
            claimName: mongo-pvc
