mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    name: mongo-svc
  namespace: deploy
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
