node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-svc
  labels:
    name: node-svc
  namespace: deploy
spec:
  selector:
    app: nodeapp
  ports:
  - port: 80
    targetPort: 8000
